--- a/Guess My Number/index.html
+++ b/Guess My Number/index.html
@@ -28,7 +28,9 @@
         </p>
       </section>
     </main>
-    <footer>Created With ❤ By Vitthal Korvan</footer>
+    <footer>
+      <h2>Created With ❤ By Vitthal Korvan</h2>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
