Button Roll Functionality Added!

--- a/Pig Game/index.html
+++ b/Pig Game/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="vitthal-korvan">
+    <meta name="author" content="vitthal-korvan" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/x-icon" href="/dice-5.png"> 
+    <link rel="icon" type="image/x-icon" href="/dice-5.png" />
     <title>Pig Game</title>
   </head>
   <body>
